Fixing text overflow on post titles

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -778,7 +778,7 @@ a.slink{
 
 .postinfo{
   display:inline-block;
-  width: 90%;
+  width: 85%;
 }
 
 #postflairs {
